[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Assignments/Assignment.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Assignments/background_desert.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Assignments/MenuBG.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Assignments/BackButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Assignments/QuestionBankBtn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Assignments/AddQuestion.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Assignments/FinishButton.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 4 )

[node name="Assignment" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1, 0.997421 )
script = ExtResource( 1 )

[node name="background_desert" parent="." instance=ExtResource( 2 )]
position = Vector2( 414.474, 523.232 )

[node name="MenuBG" parent="." instance=ExtResource( 3 )]
position = Vector2( 164.653, -133.119 )
offset = Vector2( 248.764, 1018.95 )

[node name="QuestionNumber" type="Label" parent="."]
margin_left = 135.856
margin_top = 148.719
margin_right = 550.856
margin_bottom = 201.719
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Assignment Questions"
autowrap = true

[node name="Notification" type="Label" parent="."]
margin_left = 137.0
margin_top = 200.0
margin_right = 525.0
margin_bottom = 296.0
custom_fonts/font = SubResource( 2 )
text = "Enter the details for question 1
Ensure all fields are filled
"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 90.0
margin_top = 275.0
margin_right = 540.0
margin_bottom = 569.0
size_flags_vertical = 3
custom_constants/separation = 8

[node name="question_box" type="TextEdit" parent="VBoxContainer"]
margin_right = 450.0
margin_bottom = 90.0
rect_min_size = Vector2( 360, 90 )
custom_constants/line_spacing = 5
text = "Type the Question in me!"
smooth_scrolling = true
wrap_enabled = true

[node name="op1" type="LineEdit" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 450.0
margin_bottom = 122.0
clear_button_enabled = true
placeholder_text = "Option 1 Answer"

[node name="op2" type="LineEdit" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 450.0
margin_bottom = 154.0
clear_button_enabled = true
placeholder_text = "Option 2 Answer"

[node name="op3" type="LineEdit" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 450.0
margin_bottom = 186.0
clear_button_enabled = true
placeholder_text = "Option 3 Answer"

[node name="op4" type="LineEdit" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 450.0
margin_bottom = 218.0
clear_button_enabled = true
placeholder_text = "Option 4 Answer"

[node name="answer_promp" type="Label" parent="VBoxContainer"]
margin_top = 226.0
margin_right = 450.0
margin_bottom = 240.0
text = "Which option contains the answer? (Enter 1,2,3, or 4) "

[node name="answer" type="LineEdit" parent="VBoxContainer"]
margin_top = 248.0
margin_right = 450.0
margin_bottom = 272.0
clear_button_enabled = true

[node name="BackButton" parent="." instance=ExtResource( 5 )]
margin_left = 75.8402
margin_top = 150.824
margin_right = 788.84
margin_bottom = 857.824
rect_scale = Vector2( 0.0663311, 0.066458 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 575.0
margin_right = 5120.0
margin_bottom = 1282.0
rect_rotation = -1080.0
rect_scale = Vector2( 0.083953, 0.0823813 )
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="QuestionBankBtn" parent="HBoxContainer" instance=ExtResource( 6 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 2495.0
margin_bottom = 707.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 3

[node name="AddQuestion" parent="HBoxContainer" instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 2904.0
margin_bottom = 707.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 3

[node name="Finish" parent="HBoxContainer" instance=ExtResource( 8 )]
margin_left = 2914.0
margin_right = 5000.0
margin_bottom = 707.0
rect_scale = Vector2( 1, 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="text_changed" from="VBoxContainer/answer" to="." method="_on_answer_text_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="HBoxContainer/QuestionBankBtn" to="." method="_on_QuestionBankBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/AddQuestion" to="." method="_on_AddQuestion_pressed"]
[connection signal="pressed" from="HBoxContainer/Finish" to="." method="_on_Finish_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
